welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:7: error: type mismatch;
 found   : Int(10)
 required: Boolean
		x= 10
                   ^redTicket:10: error: type mismatch;
 found   : Int(5)
 required: Boolean
		x=5
                  ^redTicket:13: error: type mismatch;
 found   : Int(1)
 required: Boolean
		x=1
                  ^redTicket:15: error: type mismatch;
 found   : Int(0)
 required: Boolean
	else x=0;
               ^redTicket:16: error: type mismatch;
 found   : Boolean
 required: Int
	return x
               ^